# oop

./: CMakeLists.txt  README.md  main.cpp
lab2/: about
lab3/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/BLL/: CMakeLists.txt  IService.h  Service.cpp  Stuff.h  StuffService.cpp  Task.h  TaskService.cpp  Task_Control_System.h  Task_Control_System_Service.cpp
lab6/DAL/: CMakeLists.txt  IRepository.h  Stuff.h  StuffRepository.cpp  Task.h  TaskRepository.cpp  Task_Control_System.h  Task_Control_System_Repository.cpp
lab6/UI/: CMakeLists.txt  PersonController.h  PersonView.h  TaskController.h  TaskView.h  main.cpp
